[package]
name = "cargo-qtest"
version = "0.1.2"
edition = "2021"
authors = ["Onur Ozkan <contact@onurozkan.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/onur-ozkan/cargo-qtest"
homepage = "https://github.com/onur-ozkan/cargo-qtest"
description = "an interactive test runner for rust projects"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "test", "util", "interactive"]
exclude = [".asciinema", ".github/"]

[[bin]]
path = "src/main.rs"
name = "cargo-qtest"

[dependencies]
inquire = { version = "0.6.2", default-features = false, features = ["crossterm"] }
regex = { version = "1.10.2", default-features = false }

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'abort'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
debug = 0
strip = true
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1